# CrewAI-Agent

./: .gitignore  README.md  requirements.txt
alacater/: README.md  knowledge.ipynb  pyproject.toml  report.md
alacater/src/alacater/: crew.py  main.py
alacater/src/alacater/config/: agents.yaml  tasks.yaml
alacater/src/alacater/tools/: custom_tool.py
deep-learn/: 1.ipynb  2.ipynb  3.ipynb
