[project]
name = "alacater"
version = "0.1.0"
description = "alacater using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
alacater = "alacater.main:run"
run_crew = "alacater.main:run"
train = "alacater.main:train"
replay = "alacater.main:replay"
test = "alacater.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
